fixing some layout issues

--- a/frontend/src/styles/site.css
+++ b/frontend/src/styles/site.css
@@ -180,17 +180,20 @@ path.recharts-sector {
     .tag-filters {
         width: 600px;
     }
-    .trend-chart,
-    .tags-over-time {
-        scale: 0.5;
-        transform-origin: 0;
-    }
     .trend-chart h2,
     .tags-over-time h2 {
         scale: 2;
         transform-origin: 0;
         position: relative;
         top: -40px;
+    }
+}
+
+@media (max-width: 1900px) {
+    .trend-chart,
+    .tags-over-time {
+        scale: 0.5;
+        transform-origin: 0;
     }
     .keyword-overviews {
         flex-direction: column;
